<resources>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="new_here_sign_up">New here? Sign up!</string>
    <string name="or">OR</string>
    <string name="hello">Hello!</string>
    <string name="sign_in_using">Sign in using:</string>
    <string name="create_your_account">Create your account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign up</string>
    <string name="ok">Ok</string>
    <string name="information">Information</string>
    <string name="email_valid_error">Typed email address is not valid. Please type correct address.</string>
    <string name="password_valid_error">Type password is to shot. Please type correct.</string>
    <string name="user_name_empty_error">Username cannot be empty.</string>
    <string name="password_confirm_password_not_same">Password and confirm password are not match.</string>
    <string name="reset_password">Reset password</string>
    <string name="email_address">Email address</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="registration_success">Your account has been created. Now you can login into application.</string>
    <string name="check_email_for_reset_password_message">Please check your email box. Reset your password by following the instructions from the email.</string>
    <string name="drawer_open" translatable="false">Open navigation drawer</string>
    <string name="drawer_close" translatable="false">Close navigation drawer</string>
    <string name="shopping_list_name">Shopping list name</string>
    <string name="empty_shopping_list_name_error">Name cannot be empty</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit profile</string>
    <string name="other">Other</string>
    <string name="about">About</string>
    <string name="shopping_lists">Shopping lists</string>
    <string name="your_friends">Your friends</string>
    <string name="shared_lists">Shared lists</string>
    <string name="help_and_feedback"><![CDATA[Help & feedback]]></string>
    <string name="save">Save</string>
    <string name="item_name">Item name</string>
    <string name="item_value">Item value</string>
    <string name="add">Add</string>
    <string name="name_can_not_be_empty">Name can not be empty.</string>
    <string name="number_can_not_be_empty">Number can not be empty.</string>
    <string name="number_must_be_higher_then_zero">Number must be higher then zero</string>
    <string name="add_new_item">Add new item</string>
    <string name="update">Update</string>
    <string name="shopping_list_is_not_empty">Shopping list is not empty. Would you like to save it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="list_is_empty">Your shopping list is empty. Please add at least one item for save it.</string>
    <string name="delete_list">Delete list</string>
    <string name="are_you_sure_you_want_to_delete_the_list">Are you sure you want to delete the list</string>
    <string name="edit_list_name">Edit list name</string>
    <string name="are_you_sure_to_delete_this_item">Are you sure to delete this item?</string>
    <string name="logout">Logout</string>
    <string name="friends">Friends</string>
    <string name="requests">Requests</string>
    <string name="add_friend">Add fiend</string>
    <string name="find_friend">Find friend</string>
    <string name="search">Search</string>
    <string name="friend_request_send_success">Your friend request was sent success.</string>
    <string name="friend_request_already_sent">You already send request to this user.</string>
    <string name="share">Share</string>
</resources>
