<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dashboard_drawer_shopping_lists"
            android:icon="@drawable/ic_shopping_lists"
            android:title="@string/shopping_lists" />
        <item
            android:id="@+id/dashboard_drawer_your_friends"
            android:checkable="false"
            android:icon="@drawable/ic_friends_list"
            android:title="@string/your_friends" />
        <item
            android:id="@+id/dashboard_drawer_shared_lists"
            android:icon="@drawable/ic_shared_lists"
            android:title="@string/shared_lists" />
    </group>

    <item android:title="@string/other">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/dashboard_drawer_edit_profile"
                    android:icon="@drawable/ic_profile"
                    android:title="@string/edit_profile" />
                <item
                    android:id="@+id/dashboard_drawer_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/settings" />
                <item
                    android:id="@+id/dashboard_drawer_help_feedback"
                    android:icon="@drawable/ic_help"
                    android:title="@string/help_and_feedback" />
            </group>
        </menu>
    </item>
</menu>