<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shopping_background"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/hello"
        android:textColor="@android:color/white"
        android:textSize="32sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fragment_login_social_ll"
        android:layout_marginBottom="8dp"
        android:text="@string/sign_in_using"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:id="@+id/fragment_login_social_ll"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_above="@+id/fragment_login_separator_ll"
        android:orientation="horizontal">

        <include
            android:id="@+id/fragment_login_google_btn"
            layout="@layout/view_google_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <View
            android:layout_width="4dp"
            android:layout_height="wrap_content" />

        <include
            android:id="@+id/fragment_login_facebook_btn"
            layout="@layout/view_facebook_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_login_separator_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fragment_login_input_ll"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/or"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_login_input_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="#90ffffff"
        android:orientation="vertical"
        android:padding="8dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/InputTextStyle">

            <EditText
                android:id="@+id/fragment_login_email_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/InputTextStyle">

            <EditText
                android:id="@+id/fragment_login_password_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/fragment_login_login_btn"
        style="@style/AcceptButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_login_input_ll"
        android:layout_marginTop="16dp"
        android:text="@string/log_in" />

    <ProgressBar
        android:id="@+id/fragment_login_progress_bar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_above="@+id/fragment_login_bottom_info_ll"
        android:layout_below="@+id/fragment_login_login_btn"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/fragment_login_bottom_info_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fragment_login_forgot_password_ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/fragment_login_forgot_sign_up_ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/new_here_sign_up"
            android:textColor="@android:color/white" />
    </LinearLayout>
</RelativeLayout>